# Semaphore

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  configure.ac  gtkui.cpp  gtkui.h  main.cpp  main.h  meson.build  semaphore.kdev4
share/: meson.build  semaphore.xml.in
share/addon/: semaphore.conf.in
share/inputmethod/: semaphore.conf
src/: config.h.in  gtkui.cpp  main.cpp  main.h  meson.build  semaphore.cpp  semaphore.h  util.cpp  util.h
